Add Predict.fun account linking flow
